@@ -50,6 +50,10 @@ Bug Fixes
 * SOLR-5479: SolrCmdDistributor retry logic stops if a leader for the request 
   cannot be found in 1 second. (Mark Miller)
 
+* SOLR-5532: SolrJ Content-Type validation is too strict for some
+  webcontainers / proxies. (Jakob Furrer, hossman, Shawn Heisey, Uwe Schindler,
+  Mark Miller)
+
 ==================  4.6.0 ==================
 
 Versions of Major Components
